<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home_fragment"
        android:title="@string/menu_item_home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/nav_about_us_fragment"
        android:title="@string/menu_item_about_us" />
    <item
        android:id="@+id/nav_activity_fragment"
        android:title="@string/menu_item_activity" />
    <item
        android:id="@+id/nav_news_fragment"
        android:title="@string/menu_item_news" />
    <item
        android:id="@+id/nav_reviews_fragment"
        android:title="@string/menu_item_testimonials" />
    <item
        android:id="@+id/nav_contacts_fragment"
        android:title="@string/menu_item_contact" />
    <item
        android:id="@+id/nav_contribute_fragment"
        android:title="@string/menu_item_contributes" />

</menu>